--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Relocating to a new personal or professional space is a significant milestone that often brings excitement, anticipation, and its fair share of stress. At Alpine Moving Company, we aim to replace uncertainty with confidence by guiding you through every step of the moving process." />
     <meta name="keywords" content="Movers Fort Collins CO, Moving companies Fort Collins CO, Movers near me" />
-    <meta property="og:title" content="Movers in Fort Collins, CO" />
-    <title>Movers in Fort Collins, CO</title>
+    <meta property="og:title" content="Moving companies Fort Collins CO" />
+    <title>Moving companies Fort Collins CO</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Movers in Fort Collins CO</h1>
+        <h1>Moving companies Fort Collins CO</h1>
         <button onclick="window.location.href='tel:+16148208790'">Click Here to Call Us: 16148208790</button>
     </div>
 
